<resources>
    <string name="app_name" translatable="false">Play Music Exporter</string>
    <string name="title_track_detail">Track Detail</string>
    <string name="action_select_all">Select all</string>
    <string name="action_deselect_all">Deselect all</string>
    <string name="action_export">Export</string>
    <string name="action_play">Play</string>
    <string name="action_share">Share</string>
    <string name="navigation_drawer_open">Open drawer</string>
    <string name="navigation_drawer_close">Close drawer</string>
    <string name="view_type_selection_title">View</string>
    <string name="title_view_album">Albums</string>
    <string name="title_view_artist">Artists</string>
    <string name="title_view_playlist">Playlists</string>
    <string name="title_view_rated">Good rated</string>
    <string name="title_settings">Settings</string>
    <string name="notification_export_working_summery">Export track %1$d of %2$d&#8230;</string>
    <string name="notification_export_working_single_summery">Export track&#8230;</string>
    <string name="notification_export_finished_title">Export finished!</string>
    <string name="notification_export_finished_summery">%1$d tracks were exported successfully!</string>
    <string name="notification_export_finished_single_summery">%1$s was exported successfully!</string>
    <string name="dialog_storage_access_denied_title">Storage access denied</string>
    <string name="dialog_storage_access_denied">The Play Music Exporter does not work without write access to the external storage. You can not use this app without granting it write access.</string>
    <string name="dialog_superuser_access_denied_title">Root access denied</string>
    <string name="dialog_superuser_access_denied">The Play Music Exporter does not work without superuser access. You can not use this app without granting it superuser access.</string>
    <string name="toast_error_track_not_offline">You can only export offline tracks. Try to download the album offline in Play Music.</string>
    <string name="text_okay">OK</string>
    <string name="search">Search&#8230;</string>
    <string name="button_export_group">Export all tracks</string>
    <string name="settings_category_export">Export settings</string>
    <string name="settings_category_extra">Extras</string>
    <string name="settings_category_about_original_developer">About the original developer</string>
    <string name="settings_category_about_me">About me</string>
    <string name="settings_category_thanks">Thanks to</string>
    <string name="settings_category_develop">About this version</string>
    <string name="settings_category_auto_export_conditions">Export conditions</string>
    <string name="settings_category_auto_export_path_subdir">Export path and subdirectory structure</string>
    <string name="settings_category_debug">Debug</string>
    <string name="settings_category_alba_export">Export location for albums</string>
    <string name="settings_category_groups_export">Export location for playlists</string>
    <string name="settings_version_number">Version Number</string>
    <string name="settings_build_date">Build date</string>
    <string name="settings_auto_export_enable_checkbox">Enable automatic export</string>
    <string name="settings_auto_export_require_unmetered_checkbox">Require unmetered network</string>
    <string name="settings_auto_export_require_charging_checkbox">Require charging</string>
    <string name="settings_auto_export_interval_list">Export interval</string>
    <string name="settings_auto_export_different_path_switch">Use a different export path</string>
    <string name="settings_auto_export_different_path_switch_summary">Off means that the automatic export uses the same export path as manual album exports.</string>
    <string name="settings_auto_export_different_path">Export path</string>
    <string name="settings_auto_export_different_structure_switch">Use a different subdirectory structure</string>
    <string name="settings_auto_export_different_structure_switch_summary">Off means that the automatic export uses the same subdirectory structure as albums.</string>
    <string name="settings_auto_export_different_structure">Subdirectory structure</string>
    <string name="settings_auto_export_different_structure_dialog_title">Subdirectory structure</string>
    <string name="settings_category_export_location">Export Location</string>
    <string name="settings_export_path">Export Base Path</string>
    <string name="settings_export_subdirectory_structure_dialog_message">Use / for a new folder \n Available Tags: \n - {album-artist} \n - {album} \n - {artist} \n - {title} \n - {disc=CD $} \n - {no=$$.} \n - {year} \n - {genre} \n</string>
    <string name="settings_playlist_export_subdirectory_structure_dialog_message">Use / for a new folder \n Available Tags: \n - {playlist} \n - {album-artist} \n - {album} \n - {artist} \n - {title} \n - {disc=CD $} \n - {no=$$.} \n - {year} \n - {genre} \n</string>
    <string name="settings_export_path_alba">Export path for albums</string>
    <string name="settings_export_structure_alba">Subdirectory structure for albums</string>
    <string name="settings_export_structure_alba_dialog_title">Set your subdirectory structure</string>
    <string name="settings_export_subdirectory_structure_album_example">Example: Beatles/Help!/13. Yesterday.mp3</string>
    <string name="settings_export_path_groups">Export path for playlists</string>
    <string name="settings_export_structure_groups">Subdirectory structure for playlists</string>
    <string name="settings_export_structure_groups_dialog_title">Set your subdirectory structure</string>
    <string name="settings_export_subdirectory_structure_group_example">Example: Great Songs/4. Beatles - Yesterday.mp3</string>
    <string name="settings_export_id3">ID3 Tags</string>
    <string name="settings_export_id3_with_cover">Metadata with cover</string>
    <string name="settings_export_id3_without_cover">Metadata without cover</string>
    <string name="settings_export_id3_disabled">No metadata</string>
    <string name="settings_category_metadata">Metadata</string>
    <string name="settings_export_id3_artwork_size">Maximum artwork size</string>
    <string name="settings_export_id3_artwork_size_summary">If the artwork original size is larger than this setting the app will size down the artwork to this size.</string>
    <string name="settings_export_path_custom">Custom path</string>
    <string name="settings_export_overwrite_existing">Overwrite existing files</string>
    <string name="settings_open_old_homepage_title" translatable="false">David-Schulte.de</string>
    <string name="settings_open_old_homepage_url" translatable="false"><![CDATA[http://www.david-schulte.de/]]></string>
    <string name="settings_open_homepage_title">Website</string>
    <string name="settings_open_homepage_url" translatable="false"><![CDATA[https://github.com/jcgruenhage/PlayMusicExporter]]></string>
    <string name="settings_mp3agic_title" translatable="false">Mp3agic ID3 Libary</string>
    <string name="settings_mp3agic_summery" translatable="false">Michael Patricios &#169; 2006&#8211;2013</string>
    <string name="settings_mp3agic_url" translatable="false"><![CDATA[https://github.com/mpatric/mp3agic]]></string>
    <string name="settings_donation_old_title">Support the original developer</string>
    <string name="settings_donation_old_summery">Donate to David Schulte via PayPal</string>
    <string name="settings_donation_old_url" translatable="false"><![CDATA[https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=A2VD24Z5E32RU]]></string>
    <string name="action_mode_track_selection">%d tracks selected</string>
    <string name="pref_header_export">Export</string>
    <string name="pref_header_automation">Automation</string>
    <string name="pref_header_about">About</string>
    <string name="pref_header_debug">Debug</string>
    <string name="settings_export_structure_alba_default_value" translatable="false">{album-artist}/{album}/{disc=CD $}/{no=$$.} {title}.mp3</string>
    <string name="settings_export_structure_groups_default_value" translatable="false">{playlist}/{artist} - {title}.mp3</string>
    <string name="debug_trigger_export_all_title">Trigger ExportAllService now</string>
    <string name="file_handling_category">File Handling</string>
    <string name="overwrite_summary">Always overwrite the exported file, even if it already exists</string>
    <string name="overwrite_title">Overwrite Existing Files</string>
    <string name="action_refesh">Refresh</string>
    <string name="database_reloaded">Music Database Reloaded</string>
    <string name="debug_test_crash_handler">Test Crash Handler</string>
    <string name="settings_donation_title">Support me</string>
    <string name="settings_donation_summery">Donate to the current developer via Bitcoin. This requires that you have installed a bitcoin wallet on your phone. For donations from a computer, see the homepage.</string>
    <string name="settings_donation_url" translatable="false"><![CDATA[bitcoin:1NdzpDWPQ53xWT5fraGPZX5F9XrKiPBXjp]]></string>
    <string name="intro_welcome_title">Welcome!</string>
    <string name="intro_welcome_description">This is the Play Music Exporter. It can export songs from Play Music and save them as MP3 files where you want them to be.</string>
    <string name="intro_warning_title">Warning!</string>
    <string name="intro_warning_description">You are responsible for what you do with this app. Depending on where you live it might be illegal to use this app. We discourage piracy of music and other intellectual property. Sharing music you exported with this tool might be a very bad idea, Google could put an invisible watermark on the music, so that people can trace the MP3s back to the owner of the Google account that was used.</string>
    <string name="intro_storage_title">We need access to your storage.</string>
    <string name="intro_storage_description">We need to access the external storage, for copying the Play Music database to a folder, where we have the right to work with it. We also need access to the external storage, to finish up the MP3s, from encrypted without ID3 tags, to decrypted with ID3 tags, before we save them to your export path.</string>
    <string name="intro_superuser_description">Some of the files we need to access are in the private folders of Play Music. Android prevents apps from accessing the private folders of other apps, but luckily, you can circumvent this protection with root access. Without root access this app can\'t do anything.</string>
    <string name="intro_superuser_title">We need root access.</string>
    <string name="intro_error_description">No single piece of software is perfect. To get this closer though, we have added automated error reporting to this app. If you would like to help make this app better, let us enable that. If you don\'t enable this and something does not work, you are on your own, since we can\'t help you without having the logs this provides us with. The data collected by this does not include anything that could be used to identify you. (You will be prompted to either accept or deny that when you go to the next slide)</string>
    <string name="intro_error_title">Anonymous error reporting.</string>
    <string name="intro_finish_description">One note: Should you revoke any of these permission, the tutorial will be shown again on the next launch.</string>
    <string name="intro_finish_title">Introduction finished!</string>
    <string name="error_alert_dialog_title">Anonymous error reporting?</string>
</resources>