<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Thanks to -->
    <PreferenceCategory android:title="@string/settings_category_thanks">
        <!-- Mp3agic -->
        <Preference
            android:summary="@string/settings_mp3agic_summery"
            android:title="@string/settings_mp3agic_title">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/settings_mp3agic_url" />
        </Preference>
    </PreferenceCategory>

    <!-- About David Schulte -->
    <PreferenceCategory android:title="@string/settings_category_about_me">
        <!-- Homepage -->
        <Preference
            android:summary="@string/settings_open_homepage_url"
            android:title="@string/settings_open_homepage_title">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/settings_open_homepage_url" />
        </Preference>
    </PreferenceCategory>

    <!-- About David Schulte -->
    <PreferenceCategory android:title="@string/settings_category_about_original_developer">
        <!-- Homepage -->
        <Preference
            android:summary="@string/settings_open_old_homepage_url"
            android:title="@string/settings_open_old_homepage_title">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/settings_open_old_homepage_url" />
        </Preference>

        <!-- Donation -->
        <Preference
            android:summary="@string/settings_donation_old_summery"
            android:title="@string/settings_donation_old_title">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/settings_donation_old_url" />
        </Preference>
    </PreferenceCategory>

    <!-- Develop -->
    <PreferenceCategory android:title="@string/settings_category_develop">
        <!-- TODO change Version number and build date with releases -->
        <!-- Version number-->
        <Preference
            android:summary="0.9.3"
            android:title="@string/settings_version_number" />
        <!-- Build date-->
        <Preference
            android:summary="19.01.2017"
            android:title="@string/settings_build_date" />
    </PreferenceCategory>

</PreferenceScreen>
